--- a/week-5/poke-clone/package.json
+++ b/week-5/poke-clone/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "axios-cache-interceptor": "^1.8.3",
@@ -19,6 +20,7 @@
     "pokenode-ts": "^1.20.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-router": "^7.9.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13"
   },
